# proxy-skitchen

./: .gitignore  AGENTS.md  LICENSE  README.md  _debug_tree.py  proxy-skitchen  proxy-skitchen-windows.spec  proxy-skitchen.spec  pyproject.toml  requirements.txt  run_proxy_skitchen.pyw
.github/workflows/: build.yml
proxy_skitchen/: __init__.py  __main__.py  compat.py  exporters.py  geo.py  i18n.py  models.py  notifier.py  parsers.py  tester.py  ui.py  workers.py
