[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "proxy-skitchen"
version = "1.0.0"
description = "Графическое приложение для поиска, тестирования и экспорта прокси"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PySide2>=5.15",
    "pysocks>=1.7",
]

[project.urls]
Homepage = "https://github.com/your-username/proxy-skitchen"
