[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "proxy-skitchen"
version = "2.5.2"
description = "Графическое приложение для поиска, тестирования и экспорта прокси"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "pysocks>=1.7",
]

[project.urls]
Homepage = "https://github.com/cyberanrhy/proxy-skitchen"
Repository = "https://github.com/cyberanrhy/proxy-skitchen"
